--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
 	"version": "1.0.0",
 	"main": "expo-router/entry",
 	"scripts": {
-		"start": "expo start",
+		"start": "expo start -c",
 		"android": "expo start --android",
 		"ios": "expo start --ios",
 		"web": "expo start --web"
 	},
 	"dependencies": {
+		"@babel/runtime": "^7.24.4",
+		"@expo/vector-icons": "^13.0.0",
+		"dayjs": "^1.11.10",
 		"expo": "~50.0.14",
 		"expo-constants": "~15.4.5",
 		"expo-linking": "~6.2.2",
 		"expo-router": "~3.4.8",
 		"expo-status-bar": "~1.11.1",
+		"nativewind": "^2.0.11",
 		"react": "18.2.0",
 		"react-native": "0.73.6",
 		"react-native-safe-area-context": "4.8.2",
@@ -22,6 +26,8 @@
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
 		"@types/react": "~18.2.45",
+		"metro-react-native-babel-preset": "^0.77.0",
+		"tailwindcss": "3.3.2",
 		"typescript": "^5.1.3"
 	},
 	"private": true
