--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"main": "expo-router/entry",
 	"scripts": {
-		"start": "expo start -c",
+		"start": "expo start",
 		"android": "expo start --android",
 		"ios": "expo start --ios",
 		"web": "expo start --web"
@@ -20,6 +20,7 @@
 		"nativewind": "^2.0.11",
 		"react": "18.2.0",
 		"react-native": "0.73.6",
+		"react-native-responsive-fontsize": "^0.5.1",
 		"react-native-safe-area-context": "4.8.2",
 		"react-native-screens": "~3.29.0"
 	},
