--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
 	"dependencies": {
 		"@babel/runtime": "^7.24.4",
 		"@expo/vector-icons": "^13.0.0",
+		"@gorhom/bottom-sheet": "^4.6.1",
+		"@react-native-community/datetimepicker": "^7.7.0",
 		"dayjs": "^1.11.10",
 		"expo": "~50.0.14",
 		"expo-constants": "~15.4.5",
 		"expo-linking": "~6.2.2",
 		"expo-router": "~3.4.8",
 		"expo-status-bar": "~1.11.1",
-		"nativewind": "^2.0.11",
 		"react": "18.2.0",
 		"react-native": "0.73.6",
+		"react-native-gesture-handler": "~2.14.0",
+		"react-native-reanimated": "~3.6.2",
 		"react-native-responsive-fontsize": "^0.5.1",
 		"react-native-safe-area-context": "4.8.2",
 		"react-native-screens": "~3.29.0"
@@ -28,7 +31,6 @@
 		"@babel/core": "^7.20.0",
 		"@types/react": "~18.2.45",
 		"metro-react-native-babel-preset": "^0.77.0",
-		"tailwindcss": "3.3.2",
 		"typescript": "^5.1.3"
 	},
 	"private": true
