--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"@babel/runtime": "^7.24.4",
 		"@expo/vector-icons": "^13.0.0",
 		"@gorhom/bottom-sheet": "^4.6.1",
-		"@react-native-community/datetimepicker": "^7.7.0",
+		"@react-native-community/datetimepicker": "^7.6.1",
 		"dayjs": "^1.11.10",
 		"expo": "~50.0.14",
 		"expo-constants": "~15.4.5",
@@ -21,7 +21,9 @@
 		"expo-status-bar": "~1.11.1",
 		"react": "18.2.0",
 		"react-native": "0.73.6",
+		"react-native-date-picker": "^5.0.2",
 		"react-native-gesture-handler": "~2.14.0",
+		"react-native-modal-datetime-picker": "^17.1.0",
 		"react-native-reanimated": "~3.6.2",
 		"react-native-responsive-fontsize": "^0.5.1",
 		"react-native-safe-area-context": "4.8.2",
