--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@react-native-community/datetimepicker": "^7.6.1",
 		"dayjs": "^1.11.10",
 		"expo": "~50.0.14",
+		"expo-checkbox": "~2.7.0",
 		"expo-constants": "~15.4.5",
 		"expo-linking": "~6.2.2",
 		"expo-router": "~3.4.8",
