--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
 		"expo": "~50.0.14",
 		"expo-checkbox": "~2.7.0",
 		"expo-constants": "~15.4.5",
+		"expo-haptics": "~12.8.1",
 		"expo-linking": "~6.2.2",
 		"expo-router": "~3.4.8",
 		"expo-status-bar": "~1.11.1",
+		"hex-to-rgba": "^2.0.1",
 		"react": "18.2.0",
 		"react-native": "0.73.6",
 		"react-native-date-picker": "^5.0.2",
